[package]
name = "broker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
bincode = "1.3.3"
capnp = "0.20.3"
capnp-rpc = "0.20.3"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.29", features = ["derive"] }
ctrlc = "3.4.5"
futures = "0.3.31"
getrandom = "0.3.1"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }

[build-dependencies]
capnpc = "0.20.1"
